# OS-project

./: README.md  apontamentos.txt  exploit.js  exploit2.js
tecnicofs-v2/fs/: CMakeLists.txt  compileAndRunEverySUCCESStest.sh  compileAndRunSpecificTest.sh  config.h  currentTest  operations.c  operations.h  state.c  state.h
tecnicofs-v2/fs/TestesSofia/: SUCCESS--copy_to_external_direct_blocks.c  SUCCESS--copy_to_external_errors.c  SUCCESS--copy_to_external_huge_file.c  SUCCESS--copy_to_external_indirect_blocks.c  SUCCESS--copy_to_external_simple.c  SUCCESS-copy_to_external_short_str.c  SUCCESS-tfs_built_in_functions.c
tecnicofs-v2/fs/tests/: FAIL-TR_write_w_multiple_threads_2.c  SUCCESS--TR_write_more_than_allowed.c  SUCCESS--TR_write_with_multiple_threads_with_different_fh_append.c  SUCCESS-TR_close_file.c  SUCCESS-TR_read_with_diff_fh.c  SUCCESS-TR_write_w_muktiple_threads.c  SUCCESS-copy_to_external_direct_blocks.c  SUCCESS-copy_to_external_direct_blocks_appended_file.c  SUCCESS-copy_to_external_direct_blocks_truncate_file.c  SUCCESS-copy_to_external_direct_blocks_two_files.c  SUCCESS-copy_to_external_errors.c  SUCCESS-copy_to_external_huge_file.c  SUCCESS-copy_to_external_indirect_blocks.c  SUCCESS-copy_to_external_simple.c  SUCCESS-erro_mais_de_11_blocos_sem_threads.c  SUCCESS-test1.c  SUCCESS-write_10_blocks_simple.c  SUCCESS-write_10_blocks_spill.c  SUCCESS_TR_create_different_files.c  TR_create_different_files.c  TR_debug.c  TR_read_multiple_times.c  TR_read_w_multiple_threads.c  TR_read_with_diff_fh.c  TR_write_and_read.c  TR_write_w_muktiple_threads.c  (+14 more)
(+29 files in other folders)
